// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-input-radio _alert="" _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--disabled kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true 1`] = `
<kol-input-radio _hide-msg="" _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--hidden-msg kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg visually-hidden" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _accessKey="V" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _alert=true 1`] = `
<kol-input-radio _alert="" _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _disabled=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--disabled kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _hint="Hint" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true 1`] = `
<kol-input-radio _hide-msg="" _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--hidden-msg kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg visually-hidden" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _readOnly=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _readonly="" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _shortKey="S" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" _touched=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio kol-form-field--touched">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error kol-field-control--touched">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input--touched kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error kol-field-control--touched">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error kol-field-control--touched">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg" role="alert">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _orientation="horizontal" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-horizontal">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _readonly="" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio kol-form-field--touched">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error kol-field-control--touched">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input--touched kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error kol-field-control--touched">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error kol-field-control--touched">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg" role="alert">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;

exports[`kol-input-radio should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="Value" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-input-radio _placeholder="Hier steht ein Platzhaltertext" _value="Value">
  <template shadowrootmode="open">
    <fieldset class="kol-form-field kol-form-field-- kol-form-field--error kol-form-field--radio">
      <legend class="kol-form-field__label kol-form-field__label--legend" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </legend>
      <div class="kol-form-field__input kol-form-field__input--orientation-vertical">
        <div class="kol-field-control kol-field-control--disabled kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-input--error kol-input-radio kol-input-radio--disabled" disabled="" id="id-nonce-0" name="field" type="radio" value="-0">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-0" id="id-nonce-0-label">
            <span class="kol-field-control__label-text">
              <span>
                Frau
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-1" name="field" type="radio" value="-1">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-1" id="id-nonce-1-label">
            <span class="kol-field-control__label-text">
              <span>
                Herr
              </span>
            </span>
          </label>
        </div>
        <div class="kol-field-control kol-field-control--error">
          <div class="kol-field-control__input">
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input-radio" id="id-nonce-2" name="field" type="radio" value="-2">
          </div>
          <label class="kol-field-control__label" htmlfor="id-nonce-2" id="id-nonce-2-label">
            <span class="kol-field-control__label-text">
              <span>
                Divers
              </span>
            </span>
          </label>
        </div>
      </div>
      <div aria-hidden="true" class="kol-alert kol-alert--error kol-alert--msg kol-form-field__msg" id="id-nonce-msg">
        <div class="kol-alert__container">
          <kol-icon _icons="codicon codicon-error" _label="kol-error" class="kol-alert__heading-icon"></kol-icon>
          <div class="kol-alert__container-content">
            <div class="kol-alert__content"></div>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
</kol-input-radio>
`;
